dist/yaml/ovnkube-identity.yaml
# ovnkube-identity
# starts ovnkube-identity
# it is run on the master(s).
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ovnkube-identity
  # namespace set up by install
  namespace: ovn-kubernetes
  annotations:
    kubernetes.io/description: |
      This Deployment launches the ovnkube-identity networking component.
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: ovnkube-identity
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ovnkube-identity
        name: ovnkube-identity
        component: network
        type: infra
        kubernetes.io/os: "linux"
    spec:
      priorityClassName: "system-cluster-critical"
      serviceAccountName: ovnkube-identity
      hostNetwork: true
      dnsPolicy: Default

      # required to be scheduled on a linux node with node-role.kubernetes.io/control-plane label and
      # only one instance of ovnkube-control-plane pod per node
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - "linux"
      containers:
      - name: ovnkube-identity
        image: "ecpaas-dockerhub.atan-networks.com.cn/ovn-kubernetes/ovn-kube-u:master"
        imagePullPolicy: "IfNotPresent"
        command: ["/root/ovnkube.sh", "ovnkube-identity"]
        securityContext:
          runAsUser: 0
        terminationMessagePolicy: FallbackToLogsOnError
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
        volumeMounts:
          - mountPath: /etc/webhook-cert/
            name: webhook-cert
      volumes:
        - name: webhook-cert
          secret:
            secretName: ovnkube-webhook-cert
      tolerations:
      - operator: "Exists"

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ovn-kubernetes-admission-webhook-node
webhooks:
  - name: ovn-kubernetes-admission-webhook-node.k8s.io
    clientConfig:
      url: https://localhost:9443/node
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZFekNDQXZ1Z0F3SUJBZ0lVVXdsVEozdXhqZkhlQ1lha3UwTTF2c1c0bWM4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dURVhNQlVHQTFVRUF3d09jMlZzWmkxemFXZHVaV1F0WTJFd0hoY05NalF3TmpFek1ESTBPVEk1V2hjTgpNalV3TnpFNE1ESTBPVEk1V2pBWk1SY3dGUVlEVlFRRERBNXpaV3htTFhOcFoyNWxaQzFqWVRDQ0FpSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0lQQURDQ0Fnb0NnZ0lCQU84Z21rcXRCblVaQmZOWTBwTFFEVWhYU2E0ZnJBTmcKUFRmcktNbmFJZUN6STN5U2tmZ0hsL1h4Y1QrSU14cWNibDNid2lRZVRLbXJOdTdzKzFjTHFTcHYreFJRMmIrUApDTG5HMUU5VGMz [...]
    admissionReviewVersions: ['v1']
    sideEffects: None
    rules:
      - operations: [ "UPDATE" ]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["nodes/status"] # Using /status subresource doesn't protect from other users changing the annotations
        scope: "*"

# in non-ic environments ovnkube-node doesn't have the permissions to update pods
